[package]
name = "trexter"
version = "0.1.0"
edition = "2021"
author = "Simon creek"
License = "MIT or Apache 2.0"
license = "MIT OR Apache-2.0"
keywords = ["text-processing"]
categories = ["text-processing"]
description = "Text progression tracking library"
homepage = "https://github.com/simhyeon/trexter"
repository = "https://github.com/simhyeon/trexter"
